refactor: 全部41篇部署文档按新格式重写
所有文档统一为6段式结构：
1. 环境要求
2. 裸机安装（通用）
3. 单机部署（配置/启动/验证/Compose）
4. 集群/生产部署（节点规划/配置/启动/验证/Compose）
5. 运维速查
6. 常见故障

移除百科介绍，配置完整可复制，Docker Compose缩略格式